# hegel-guile

./: .gitignore  AGENTS.md  CHANGELOG.org  CLAUDE.md  Makefile  Makefile.am  Makefile.simple  README.org  SPEC.org  configure.ac  conjectures-c10-c15.org  conjectures.org  hegel-guile.el  hegel-guile.org  pyproject.toml  roadmap.org  spec.org
.beads/: issues.jsonl  metadata.json
.github/workflows/: release.yml  test.yml
docs/: experience-report.org  meta-prompt-v0-review.md  meta-prompt-v0.md  meta-prompt-v1.md  observability-design.md  pbt-landscape.md  property-cages-from-sage.md  protocol-map.org  testing-strategy.org
examples/: basic.scm  compaction-contracts.scm  file-roundtrip.scm  guile-specifics.scm  json-int-fuzz.scm  ledger.scm  lisp.scm  shape-coercion.scm  sicp.scm  todo.scm
meta/: BUILD-PROCESS.org
references/: guile.md
scripts/: doc-check.sh  health-check.sh  lint-contracts.sh  stdio-probe.scm
skills/hegel-guile/: SKILL.md  skill.md
skills/mise-en-place/: SKILL.md
src/: Makefile.am  hegel.scm
src/hegel/: Makefile.am  cbor.scm  channel.scm  crc32.scm  generators.scm  mux.scm  packet.scm  protocol.scm  server.scm  test-case.scm  test.scm
tests/: test-cbor-pbt.scm  test-cbor.scm  test-channel.scm  test-crc32-pbt.scm  test-crc32.scm  test-generators-pbt.scm  test-generators.scm  test-mux.scm  test-packet-pbt.scm  test-packet.scm  test-protocol.scm  test-server.scm  test-test-case.scm  test-test.scm
tools/: hegl-probe.scm  stdio-probe.scm
